--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,56 @@
 /* RESET */
-* {
+img {
    max-width: 100%;
+}
+
+body {
+    font-weight: bold;
 }
 
 /* HEADER */
 header {
-    height: 70px;
+    height: 80px;
     background-color: rgba(44, 62, 80, 1);
     color: white;
 }
 
+header h2 {
+    margin: 0;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
 header .ms_menu-list {
     list-style-type: none;
+    margin: 0;
 }
 
 header .ms_menu-list li {
     margin-left: 1rem;
-    /* font-size: 0.7rem; */
 }
 
 header .ms_menu-list li a {
     text-decoration: none;
+    font-size: 0.8rem;
+    color: white;
+}
+
+header span {
+    color: rgba(136, 136, 136, 1);
+    border: 2px solid rgba(136, 136, 136, 1);
+    border-radius: 5px;
+    padding: 1px 10px;
+}
+
+header span:hover {
+    border: 2px solid white;
+    color: white;
 }
 
 /* MAIN */
+
+/* JUMBOTRON */
+
 .jumbotron {
     background-color: rgba(26, 188, 156, 1);
     text-align: center;
@@ -31,12 +58,68 @@ header .ms_menu-list li a {
 }
 
 .jumbotron img {
-    width: 50%;
+    width: 250px;
+    margin: 20px 0;
 }
 
-.portfolio {
-    text-align: center;
+.jumbotron h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding-bottom: 15px;
 }
+
+.jumbotron .white {
+    border: 2px solid white;
+    border-radius: 50px;
+    width: 90px;
+}
+
+.jumbotron .star i {
+    font-size: 1.7rem;
+    padding: 0 10px;
+}
+
+.jumbotron h2 {
+    font-size: 1.3rem;
+    padding: 20px 0 40px 0;
+}
+
+/* PORTFOLIO */
+
+.portfolio {
+    /* text-align: center; */
+}
+
+.portfolio h2 {
+    font-size: 1.7rem;
+    color: black;
+    font-weight: bold;
+    padding: 30px 0 20px 0;
+}
+
+.portfolio .star {
+    margin-bottom: 15px;
+}
+
+.portfolio .black {
+    border: 2px solid black;
+    border-radius: 50px;
+    width: 90px;
+}
+
+.portfolio .star i {
+    font-size: 1.7rem;
+    padding: 0 10px;
+    color: black;
+}
+
+.portfolio img {
+    border-radius: 10px;
+    margin: 15px 0;
+}
+
+
+/* ABOUT */
 
 .about {
     background-color: rgba(26, 188, 156, 1);
